# pyntofsale

./: README.md  pyproject.toml
tests/: test_ean_creation.py  test_pyntofsale.py
tools/: add_ean_to_csv.py  test_barcode.py
