[tool.poetry]
name = "pyntofsale"
version = "0.1.0"
description = "POS system for a toy shop"
authors = ["Dom Fellner <dom.fellner@posteo.de>"]
license = "unlicence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
python-escpos = {version = "^3.0a6", allow-prereleases = true}
pandas = "^1.0.1"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.770"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
